--- a/JEE7REGPAGE/src/main/webapp/index.html
+++ b/JEE7REGPAGE/src/main/webapp/index.html
@@ -5,10 +5,11 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form action ="Login-servlet">
-Username <input type="text" name="username"><br>
-Password <input type="password" name="password"><br>
-<input type="submit">
+<form action ="Login-servlet" method="post">
+    Username <input type="text" name="username"><br>
+    Password <input type="password" name="password"><br>
+    <input type="submit">
 </form>
+
 </body>
 </html>
